# mndbrt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  seahorse.heic
include/: adds.h  image.h  new.h  types.h
src/fio/: img.c
src/generation/: color.c  generator.c  threads.c
src/init/: constructor.c  error.c  main.c
src/lib/: image.c  img.c  new.c
